Return list of unrecognised_rap_ids
